--- a/IISMP/WebRoot/WEB-INF/web.xml
+++ b/IISMP/WebRoot/WEB-INF/web.xml
@@ -47,7 +47,7 @@
 <!--js,css
 等静态资源无法加载的解决方法三-->
 <!--静态资源访问配置start-->
-<servlet-mapping> 
+<!-- <servlet-mapping> 
 	<servlet-name>default</servlet-name>
 	<url-pattern>*.css</url-pattern> 
 </servlet-mapping> 
@@ -66,7 +66,7 @@
 <servlet-mapping>
 	<servlet-name>default</servlet-name>
 	<url-pattern>*.js</url-pattern> 
-</servlet-mapping>
+</servlet-mapping> -->
 
 <!--静态资源访问配置end--> 
 	 <!-- 错误界面显示 -->
